--- a/files/css/main.css
+++ b/files/css/main.css
@@ -171,16 +171,17 @@ a::focus {
 }
 
 .card {
-  margin: 10px 0;
+  margin: 1% 0;
   background: linear-gradient(to top, #000 30%, var(--gradient-color) 50%);
   overflow: hidden;
   position: relative;
   border-radius: 10px;
   opacity: 0.8;
+  width: 47%;
 }
 
 .card-img {
-  width: 27.5rem;
+  width: 100%;
   height: 20rem;
   display: block;
 }
