--- a/files/css/main.css
+++ b/files/css/main.css
@@ -5,11 +5,12 @@
 }
 
 html {
-  scroll-behavior: smooth;
+  scroll-behavior:smooth;
 }
 
 :root {
   --primary-color: #020A13;
+  /* --primary-color: #020B13; */
   --text-color: rgba(255, 252, 252, 0.838);
   --gradient-color: rgba(51, 51, 51, 0.15);
   --footer-color: #080F18;
@@ -24,7 +25,7 @@ html {
 }
 
 body {
-  font-family: "Gantari", sans-serif;
+  font-family: "Poppins", sans-serif;
   background-image: linear-gradient(var(--primary-color), var(--primary-color));
   color: var(--text-color);
   overflow-x: hidden;
@@ -50,7 +51,7 @@ a::focus {
 
 .logo {
   font-family: "Bodoni Moda", serif;
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 
 .navbar {
@@ -88,13 +89,17 @@ a::focus {
   padding: 1rem 6rem;
 }
 .main .header {
-  font-size: 2rem;
+  font-size: 2.2rem;
   font-weight: 900;
+}
+.main .header h1{
+    /* font-family: 'Stardos Stencil', cursive; */
+    font-weight: bolder;
 }
 .main .description {
   margin: 2.5rem 0;
   line-height: 2;
-  font-size: 1.12rem;
+  font-size: 0.92rem;
 }
 .main .content-link {
   font-weight: bold;
@@ -153,9 +158,10 @@ a::focus {
 }
 .inner-container .inner-container-desc {
   line-height: 2;
-  border-left: rgba(128, 128, 128, 0.05) solid;
+  border-left: rgba(128, 128, 128, 0.08) solid;
 }
 .inner-container .inner-container-desc .desc {
+  font-size: 0.92rem;
   position: relative;
   left: 2rem;
   top: -2rem;
@@ -312,7 +318,7 @@ footer {
     display: flex;
   }
   .logo {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
   }
   .navbar {
     position: fixed;
@@ -369,16 +375,16 @@ footer {
     right: -80%;
   }
   .main {
-    width: 100%;
+    width: 95%;
     margin: 1rem auto 0;
     padding: 1rem;
   }
   .main .header {
-    font-size: 2.3rem;
+    font-size: 2rem;
     font-weight: 900;
   }
   .main .description {
-    font-size: 1rem;
+    font-size: 0.92rem;
   }
   .main a {
     z-index: 1;
@@ -464,6 +470,7 @@ footer {
     opacity: 1;
   }
   .card-img {
+    opacity: 0.6;
     width: 100%;
   }
   .resume-png {
@@ -485,3 +492,72 @@ footer {
   }
 }
 /*# sourceMappingURL=main.css.map */
+
+
+/* .nav-icon{
+  width: 60px;
+  height: 45px;
+  position: relative;
+  margin: 50px auto;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+.nav-icon span {
+  display: block;
+  position: absolute;
+  height: 9px;
+  width: 100%;
+  background: #d3531a;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+.nav-icon span:nth-child(1) {
+  top: 0px;
+}
+
+.nav-icon span:nth-child(2) {
+  top: 18px;
+}
+
+.nav-icon span:nth-child(3) {
+  top: 36px;
+}
+
+.nav-icon.open span:nth-child(1) {
+  top: 18px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+.nav-icon.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px;
+}
+
+.nav-icon.open span:nth-child(3) {
+  top: 18px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+} */
