--- a/files/css/main.css
+++ b/files/css/main.css
@@ -9,19 +9,20 @@ html {
 }
 
 :root {
-  --primary-color: #020A13;
-  /* --primary-color: #020B13; */
-  --text-color: rgba(255, 252, 252, 0.838);
-  --gradient-color: rgba(51, 51, 51, 0.15);
-  --footer-color: #080F18;
-}
-
-.light-theme {
-  --text-color: rgb(21, 21, 21);
-  --primary-color: #f2f2f2;
-  --footer-color: #f2f2f2;
-  --gradient-color: rgba(51, 51, 51, 0.45);
-  font-weight: 700;
+    --text-color: rgb(21, 21, 21);
+    --primary-color: #f2f2f2;
+    --footer-color: #f2f2f2;
+    --gradient-color: rgba(51, 51, 51, 0.45);
+    font-weight: 700;
+  }
+  
+  .dark-theme {
+    --primary-color: #020A13;
+    font-weight: 500;
+    /* --primary-color: #020B13; */
+    --text-color: rgba(255, 252, 252, 0.838);
+    --gradient-color: rgba(51, 51, 51, 0.15);
+    --footer-color: #080F18;
 }
 
 body {
@@ -68,6 +69,7 @@ a::focus {
 }
 .nav-items:hover {
   border-bottom: 3px solid var(--text-color);
+  transition: 0.2s ease-out;
 }
 
 .mobile-nav-toggler {
@@ -86,8 +88,14 @@ a::focus {
 
 .main {
   width: 65%;
-  margin: 1rem auto 0;
+  margin: 1rem auto 20rem;
   padding: 0 6rem;
+}
+
+.main-end{
+  width: 65%;
+    margin: 1rem auto 0;
+    padding: 0 6rem;
 }
 .main .header {
   font-size: 2rem;
@@ -100,7 +108,10 @@ a::focus {
 .main .description {
   margin: 2.5rem 0;
   line-height: 2;
-  font-size: 0.8rem;
+  font-size: 0.85rem;
+}
+.main-desc p{
+  font-size: 0.95rem;
 }
 .main .content-link {
   font-weight: bold;
@@ -115,7 +126,16 @@ a::focus {
   margin: 5% 0;
   z-index: 1;
 }
-
+.para-links{
+  border-radius: 3px;
+  background-color: rgba(128, 128, 128, 0.321);
+  padding: 4px 6px;
+}
+.para-links:hover{
+  cursor: pointer;
+  background-color: green; 
+  transition:0.5s ease-in;
+}
 .form-control {
   background-color: var(--primary-color);
   margin: 0.8rem 0;
@@ -142,6 +162,12 @@ a::focus {
   margin-bottom: 3rem;
   z-index: 1;
   cursor: pointer;
+}
+
+.btn:hover{
+  background-color: black;
+  color: white;
+  border: 1px solid white;
 }
 
 .abt-container {
@@ -185,6 +211,8 @@ a::focus {
   border-radius: 10px;
   opacity: 0.8;
   width: 47%;
+  /* box-shadow: 2rem; */
+  box-shadow: 2px 2px 10px var(--primary-color);
 }
 @media screen and (max-width:480px){
   .card{
@@ -199,8 +227,8 @@ a::focus {
 }
 
 .card:hover .card-img {
-  transform: all 0.5s ease-in;
-  opacity: 0.5;
+  transform: 1s ease-out !important;
+  opacity: 0.35;
 }
 
 .card-desc {
@@ -251,7 +279,7 @@ a::focus {
 }
 
 .resume-png {
-  width: 65%;
+  width: 80%;
   border: 1px solid #000;
   box-shadow: 10px 10px 8px rgb(50, 51, 51);
 }
@@ -268,7 +296,9 @@ a::focus {
   padding: 40px 20px;
 }
 .fa-brands:hover {
-  font-size: larger;
+  font-size: large;
+  font-weight: bolder;
+  transition: 0.5s ease-out;
 }
 
 @-webkit-keyframes slide1 {
@@ -319,6 +349,7 @@ footer {
   left: -20rem;
 }
 
+
 @media screen and (max-width: 992px) {
   .nav {
     width: 100%;
@@ -354,6 +385,7 @@ footer {
     align-items: center;
     justify-items: center;
     text-transform: uppercase;
+    
   }
   .nav-items:hover {
     border-bottom: 3px solid var(--text-color);
@@ -385,7 +417,7 @@ footer {
   }
   .main {
     width: 95%;
-    margin: 1rem auto 0;
+    margin: 2rem auto 0;
     padding: 1rem;
   }
   .main .header {
@@ -393,7 +425,7 @@ footer {
     font-weight: 900;
   }
   .main .description {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   .main a {
     z-index: 1;
@@ -423,25 +455,26 @@ footer {
     left: 2rem;
     top: -2rem;
   }
-  footer {
+  footer  {
     position: fixed;
     -webkit-backdrop-filter: blur(6px) saturate(2.5);
             backdrop-filter: blur(6px) saturate(2.5);
     display: flex;
-    right: 0px;
+    /* right: 0px; */
     z-index: 999;
     align-items: center;
-    justify-content: space-evenly;
     background: var(--footer-color) !important;
     width: 100% !important;
     padding: 0px !important;
     flex-direction: row !important;
+    justify-content: space-around;
     height: 60px !important;
     bottom: 0px !important;
   }
   footer .fa-brands {
     color: var(--text-color);
-    padding: 1rem 2rem;
+    padding: 1rem 1.4rem;
+   
   }
   .watermark, .watermark-rotate {
     display: none;
@@ -497,73 +530,3 @@ footer {
   }
   
 }
-/*# sourceMappingURL=main.css.map */
-
-
-/* .nav-icon{
-  width: 60px;
-  height: 45px;
-  position: relative;
-  margin: 50px auto;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
-}
-
-.nav-icon span {
-  display: block;
-  position: absolute;
-  height: 9px;
-  width: 100%;
-  background: #d3531a;
-  border-radius: 9px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
-}
-
-.nav-icon span:nth-child(1) {
-  top: 0px;
-}
-
-.nav-icon span:nth-child(2) {
-  top: 18px;
-}
-
-.nav-icon span:nth-child(3) {
-  top: 36px;
-}
-
-.nav-icon.open span:nth-child(1) {
-  top: 18px;
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
-  transform: rotate(135deg);
-}
-
-.nav-icon.open span:nth-child(2) {
-  opacity: 0;
-  left: -60px;
-}
-
-.nav-icon.open span:nth-child(3) {
-  top: 18px;
-  -webkit-transform: rotate(-135deg);
-  -moz-transform: rotate(-135deg);
-  -o-transform: rotate(-135deg);
-  transform: rotate(-135deg);
-} */
